# Prospectus-Risk-Extraction

./: .gitignore  README.md  analyzer2.py  count_pdf_words.py  extract_risks.py  pyproject.toml
docs/: README.md  annotation_guidelines.md  evaluation_and_baseline_reporting.md
src/prospectus_risk_extraction/: __init__.py  analyzer.py  count_pdf_words.py  extract_risks.py
test_fixtures/: expected_counts.txt
tests/: test_package_import.py
